Resources/Private/Less/VideoPlayer/VideoPlayer.less
// Helpers & variables
@import "../Variables.less";
@import "Iconfont.less";

@base-color: #4e6666;
@base-color: @brand-secondary;
@light-color: lighten(@base-color, 50%);

.chapter {
    cursor: pointer;
}

.document-view {
    overflow: auto;

    .media-viewport {
        overflow: auto;

        display: flex;
        justify-content: center;
        flex-direction: column;
        align-items: center;
        flex-wrap: wrap;
    }

    .thumbnail-preview {
        // Use `visibility` instead of `display` because we want to use
        // `offsetWidth`, which is zero for elements with `display: none`.
        visibility: hidden;
        position: absolute;
        bottom: 50px;
        // Don't be shadowed by Shaka controlbar
        z-index: 1;

        &.shown {
            visibility: visible;
        }

        .display {
            // Ensure that only the current tile is shown (not the full tileset)
            overflow: hidden;
            width: 160px;
            height: 90px;
            border: 1px solid white;
            box-sizing: content-box;

            canvas {
                width: 100%;
                height: 100%;
            }
        }

        .timecode {
            display: inline-block;
            padding-top: 1em;
            // Same color and font-size as `.shaka-current-time`
            color: white;
            font-size: 14px;
        }
    }
}

.screenshot-modal {
    height: 90%;

    .screenshot-config {
        text-align: left;
        margin-bottom: 0.6rem;
    }

    canvas {
        background-color: black;
        width: 100%;
        height: auto;
    }
}

.bookmark-modal {
    text-align: left;

    .url-line {
        display: flex;

        input {
            width: 90%;
            height: 2rem;
            font-size: 1rem;
            line-height: 1rem;
            color: @base-color;
            margin-right: 4pt;
        }
    }

    .start-at {
        display: none;
        margin-top: 1em;

        &.shown {
            display: block;
        }
    }
}

.help-modal {
    .subheader {
        text-align: left;
        font-weight: bold;

        &:not(:nth-child(1)) {
            margin-top: 2em;
        }
    }

    .keybindings-table {
        td:nth-child(1) {
            width: 40%;
            text-align: right;
        }

        td:nth-child(2) {
            padding-left: 3em;
            text-align: left;
        }
    }
}

.shaka-video-container {
    /* Set to 95% of the viewPort height
     --> allow 4:3 and 19:6
      */
    height: 95vh;
}

.sxnd-modal-cover {
    display: none;
    position: absolute;
    top: 0;
    left: 0;
    width: 100vw;
    height: 100vh;
    z-index: 100000;

    &.shown {
        display: block;
    }
}

.sxnd-modal {
    position: absolute;
    display: none;
    top: 50%;
    -ms-transform: translateY(-50%);
    transform: translateY(-50%);
    background-color: rgba(@base-color, 0.9);
    color: white;
    left: 5rem;
    right: 5rem;
    border-radius: 5px;
    padding: 3rem;
    z-index: 999999;

    .headline-container {
        position: relative;

        .modal-close {
            position: absolute;
            top: 0;
            right: 0;
            cursor: pointer;
        }
    }

    .body-container {
        padding: 2rem;
    }

    h3 {
        font-weight: 700;
    }

    table {
        width: 100%;
        padding: 5rem 0;

        tr {
            &:not(:last-child) {
                border-bottom: 1px dotted @light-color;
            }

            &:first-child {
                border-bottom: 1px solid @light-color;
            }

            td {
                color: white;
                line-height: 2rem;

                &.legend {
                    color: @light-color;
                    font-weight: 700;
                }
            }
        }
    }
}

.sxnd-chapter-marker {
    width: 6px;
    height: 8px;
    cursor: pointer;
    z-index: 100;
    top: -2px;

    span {
        left: 1px;
        top: 2px;
        position: absolute;
        background-color: @light-color;
        width: 4px;
        height: 4px;
        border-radius: 2px;
    }
}

